syntax = "proto3";

package user.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/kanaru-ssk/payment-manager/backend/interface/proto/user/v1;userv1";

service UserService {
  rpc FindUserByUserId(FindUserByUserIdRequest)
      returns (FindUserByUserIdResponse);
  rpc FindUserByEmail(FindUserByEmailRequest) returns (FindUserByEmailResponse);

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message User {
  string user_id = 1;
  string user_name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message FindUserByUserIdRequest {
  string user_id = 1;
}

message FindUserByUserIdResponse {
  User user = 1;
}

message FindUserByEmailRequest {
  string email = 1;
}

message FindUserByEmailResponse {
  User user = 1;
}

message CreateUserRequest {
  string user_name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string user_name = 2;
  string email = 3;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}
